--- a/Sunduk.PWA/Dialogs/SequenceDialog.razor
+++ b/Sunduk.PWA/Dialogs/SequenceDialog.razor
@@ -269,7 +269,7 @@
 
     [Parameter] public Machines Machine { get; set; }
     [Parameter] public List<Tool> Tools { get; set; }
-    [Parameter] public ObservableCollection<Sequence> Program { get; set; }
+    [Parameter] public List<Sequence> Program { get; set; }
     [Parameter] public double WorkpieceExternalDiameter { get; set; }
     [Parameter] public double WorkpieceInternalDiameter { get; set; }
     [Parameter] public double WorkpieceLength { get; set; }
@@ -483,6 +483,7 @@
         switch (Type)
         {
             case SequenceType.General:
+                sequence = new();
                 switch (GeneralSequence)
                 {
                     case GeneralSequences.Limiter:
@@ -497,8 +498,9 @@
                 switch (TurningSequence)
                 {
                     case TurningSequences.Facing:
+                        sequence = new FacingSequence(Machine, WorkpieceMaterial, Tool as TurningExternalTool, WorkpieceExternalDiameter, WorkpieceInternalDiameter, RoughStockAllow, ProfStockAllowZ, StepOver );
                         sequence.Name = "Торцовка";
-                        sequence.Operation = Operation.Facing(Machine, WorkpieceMaterial, Tool as TurningExternalTool, WorkpieceExternalDiameter, WorkpieceInternalDiameter, RoughStockAllow, ProfStockAllowZ, StepOver);
+                        //sequence.Operation = Operation.Facing(Machine, WorkpieceMaterial, Tool as TurningExternalTool, WorkpieceExternalDiameter, WorkpieceInternalDiameter, RoughStockAllow, ProfStockAllowZ, StepOver);
                         break;
                     case TurningSequences.RoughFacing:
                         sequence.Name = "Черновая торцовка";
